# TPI-Gestion_MDS

./: .env.example  .gitignore  .jr-orchestrator-state.json  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  docker-compose.yml  opencode.jsonc  pyproject.toml
.agents/: SKILLS.md
.agents/skills/openspec-init/: SKILL.md
.agents/skills/openspec-onboard/: SKILL.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt  run_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0ffedb5f6c10_merge_three_parallel_heads.py  a1b2c3d4e5f6_002_auth_models.py  a2b3c4d5e6f7_013_create_liquidaciones.py  a3b4c5d6e7f8_014_create_facturas.py  b1c2d3e4f5a6_004_salarios_grupos.py  b2c3d4e5f6a7_005_add_config_moodle.py  c3d4e5f6a7b8_006_create_sync_log.py  d4e5f6a7b8c9_007_add_asignaciones.py  d5e6f7a8b9c0_008_create_padron_tables.py  d715beceafc3_001_tenants_usuarios.py  e1f2a3b4c5d6_004_academic_structure.py  e5f6a7b8c9d0_008_comunicaciones.py  e5f6a7b8c9d1_008_create_encuentros_guardias.py  e6f7a8b9c0d1_009_create_calificaciones_tables.py  f0a1b2c3d4e5_009_create_tareas_comentarios.py  (+5 more)
backend/app/: main.py
backend/tests/: conftest.py  test_audit.py  test_database.py  test_health.py  test_logging.py  test_settings.py
docs/: CREDENCIALES.md  DESIGN.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: App.test.tsx  example.test.ts
knowledge-base/: 12_diseno_de_sistema.md  README.md
(+620 files in other folders)
